[package]
name = "transaction_exercise"
version = "0.1.0"
edition = "2021"
default-run = "driver"

[dependencies]
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8.5"

[lib]
name="transaction"
path="src/lib.rs"

[[bin]]
name = "generate_data"

[[bin]]
name = "driver"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "transaction_bench"
harness = false